compiler/testData/diagnostics/tests/secondaryConstructors/redeclarationsOfConstructorsIgnored.fir.kt
<!REDECLARATION!>class A<!>
<!REDECLARATION!>class A {
    constructor()
}<!>

class B
class Outer {
    class B {
        constructor()
    }
}
